# laramux

./: .laramux.schema.json  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SCOPE.md  install.sh
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: laramux.rb
src/: app.rs  config.rs  error.rs  event.rs  main.rs  tui.rs  update.rs
src/log/: mod.rs  parser.rs  watcher.rs
src/process/: discovery.rs  manager.rs  mod.rs  types.rs
src/ui/: layout.rs  logstream.rs  mod.rs  output.rs  sidebar.rs  statusbar.rs  theme.rs
src/ui/components/: header.rs  mod.rs  statusbar.rs
src/ui/tabs/: about.rs  artisan.rs  config.rs  logs.rs  make.rs  mod.rs  processes.rs  quality.rs
