[package]
name = "laramux"
version = "0.1.0"
edition = "2021"
description = "A TUI application for managing Laravel development processes"
authors = ["João Paulo Santos"]
license = "MIT"
repository = "https://github.com/jonaspauleta/laramux"
keywords = ["laravel", "tui", "terminal", "development", "php"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
