[package]
name = "laramux"
version = "1.1.1"
edition = "2021"
description = "A TUI application for managing Laravel development processes"
authors = ["jonaspauleta"]
license = "MIT"
repository = "https://github.com/jonaspauleta/laramux"
keywords = ["laravel", "tui", "terminal", "development", "php"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
ansi-to-tui = "6"
sysinfo = "0.32"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3.10"

[package.metadata.deb]
maintainer = "João Paulo Santos"
copyright = "2024, João Paulo Santos"
extended-description = """LaraMux is a terminal UI application that manages Laravel development processes
(artisan serve, Vite, queue workers, Reverb) in a single terminal window with real-time log viewing."""
section = "devel"
priority = "optional"
assets = [
    ["target/release/laramux", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/laramux", dest = "/usr/bin/laramux", mode = "755" },
]
